--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,11 +2,11 @@ buildscript {
     if (project == rootProject) {
         repositories {
             google()
-            jcenter()
+            mavenCentral()
         }
 
         dependencies {
-            classpath 'com.android.tools.build:gradle:3.5.3'
+            classpath 'com.android.tools.build:gradle:7.3.1'
         }
     }
 }
@@ -18,11 +18,11 @@ def safeExtGet(prop, fallback) {
 }
 
 android {
-    compileSdkVersion safeExtGet('PipAndroid_compileSdkVersion', 29)
-    buildToolsVersion safeExtGet('PipAndroid_buildToolsVersion', '29.0.2')
+    compileSdkVersion safeExtGet('PipAndroid_compileSdkVersion', 31)
+    buildToolsVersion safeExtGet('PipAndroid_buildToolsVersion', '31.0.0')
     defaultConfig {
-        minSdkVersion safeExtGet('PipAndroid_minSdkVersion', 16)
-        targetSdkVersion safeExtGet('PipAndroid_targetSdkVersion', 29)
+        minSdkVersion safeExtGet('PipAndroid_minSdkVersion', 21)
+        targetSdkVersion safeExtGet('PipAndroid_targetSdkVersion', 31)
         versionCode 1
         versionName "1.0"
 
@@ -49,7 +49,7 @@ repositories {
         url("$rootDir/../node_modules/react-native/android")
     }
     google()
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
