--- a/package.json
+++ b/package.json
@@ -54,21 +54,21 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^26.0.0",
-    "@types/react": "^16.9.19",
-    "@types/react-native": "0.62.13",
+    "@types/react": "^18.0.25",
+    "@types/react-native": "0.70.7",
     "commitlint": "^11.0.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
-    "pod-install": "^0.1.0",
-    "prettier": "^2.0.5",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
-    "react-native-builder-bob": "^0.18.1",
-    "release-it": "^14.2.2",
-    "typescript": "^4.1.3"
+    "pod-install": "^0.1.38",
+    "prettier": "^2.8.0",
+    "react": "18.1.0",
+    "react-native": "0.70.6",
+    "react-native-builder-bob": "0.20.1",
+    "release-it": "^14.14.3",
+    "typescript": "^4.9.3"
   },
   "peerDependencies": {
     "react": "*",
@@ -144,7 +144,15 @@
     "output": "lib",
     "targets": [
       "typescript",
-      ["aar", { "reverseJetify": true }]
+      [
+        "aar",
+        {
+          "reverseJetify": true
+        }
+      ]
     ]
+  },
+  "dependencies": {
+    "react-native-builder-bob": "^0.20.1"
   }
 }
